# ComfyUI-ModelDumpster

./: README.md  __init__.py  calculator.py  diff_aggregate.py  latent_swap.py  model_keys.py  pyproject.toml
example_workflows/: Model_Ablation_example.json
web/: calculator.js  diff_viewer.js  latent_swap.js  stats.js
